--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,8 @@
   padding: 0;
   box-sizing: border-box;
 }
-body{
-  height: 100vh;
-  width: 100vw;
+.wrapper{
+    min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
