--- a/src/pages/HomePage/Home.css
+++ b/src/pages/HomePage/Home.css
@@ -1,6 +1,10 @@
 .home-wrapper {
   font-family: "inter";
   background-color: #F9F8FE;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 .carousel {
   width: 100%;
@@ -120,4 +124,43 @@ div.swiper-pagination {
   line-height: 22px;
   letter-spacing: 0.75px;
   color: var(--dark-gray-2);
+}
+
+.product-wrapper{
+  width: 100%;
+  padding:  0 100px; 
+  margin-bottom: 80px;
+}
+
+.trending{
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding:20px  50px;
+
+}
+
+.trending h4{
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 38px;
+  letter-spacing: 0,75px;
+  color: var(--dark-gray-2);
+}
+
+.trending span{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 14px;
+}
+
+.trending span a{
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 34px;
+  letter-spacing: 0.75px;
+  color: var(--primary);
+  text-decoration: none;
 }
