update: link color

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -98,6 +98,7 @@ header{
 
 .list-wrapper li a{
     text-decoration: none;
+    color: var(--dark-gray-2);
 }
 
 .list-wrapper li a:hover, .list-wrapper li a.active{ 
